fix width and spacing of nav and .nav__link

--- a/css/components/navigation.css
+++ b/css/components/navigation.css
@@ -34,11 +34,12 @@
 
 @media (max-width: 768px) {
     .nav {
-       /* flex-direction: column; */ 
-        align-items: center;
-      /*  display: none;     double check later */
         flex-direction: column;
         display: none;
+        width: 100%;
+        position: absolute;
+        top: 100%; 
+        left: 0;
     }
     
     .nav__dropdown a {
@@ -51,6 +52,6 @@
 
     .nav__link {
         width: 100%; 
-        justify-content: center; 
+        justify-content: space-between; 
     }
 }
